--- a/tips/Base.lproj/Main.storyboard
+++ b/tips/Base.lproj/Main.storyboard
@@ -80,6 +80,7 @@
                     </view>
                     <connections>
                         <outlet property="billField" destination="xJY-wy-yeI" id="Crt-vP-9dA"/>
+                        <outlet property="tipControl" destination="uYE-PA-YD9" id="tYT-5K-gvR"/>
                         <outlet property="tipLabel" destination="xaS-dB-lui" id="bRX-Kh-de9"/>
                         <outlet property="totalLabel" destination="cN7-Qa-nrw" id="bcA-lI-YXQ"/>
                     </connections>
