--- a/tips/Base.lproj/Main.storyboard
+++ b/tips/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="06o-Qx-Kgb">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -81,6 +81,7 @@
                             <outletCollection property="gestureRecognizers" destination="AAe-By-h7b" appends="YES" id="hlf-EE-1ac"/>
                         </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="73d-tb-8UC"/>
                     <connections>
                         <outlet property="billField" destination="xJY-wy-yeI" id="Crt-vP-9dA"/>
                         <outlet property="tipControl" destination="uYE-PA-YD9" id="tYT-5K-gvR"/>
@@ -94,6 +95,24 @@
                         <action selector="onTap:" destination="BYZ-38-t0r" id="fV2-ip-0cK"/>
                     </connections>
                 </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="671" y="310"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xlh-Mv-zVP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="06o-Qx-Kgb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zCq-Bu-qnH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="loB-dQ-irS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aMt-c6-hrN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="139" y="310"/>
         </scene>
