--- a/tips/Base.lproj/Main.storyboard
+++ b/tips/Base.lproj/Main.storyboard
@@ -98,6 +98,20 @@
             </objects>
             <point key="canvasLocation" x="671" y="310"/>
         </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="khA-vQ-6JJ">
+            <objects>
+                <viewController id="iNP-OQ-axl" customClass="SettingsViewController" customModule="tips" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ymd-UY-45H">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E7u-pV-0Zg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1046" y="310"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="xlh-Mv-zVP">
             <objects>
